# aiogram_bot_template

./: .editorconfig  Makefile  pyproject.toml
config_dist/: config.yml
src/infrastructure/di/: __init__.py  bot.py  config.py
src/tg_bot/: __main__.py  main_factory.py  states.py
src/tg_bot/config/models/: __init__.py  bot.py  main.py  paths.py
src/tg_bot/config/parser/: config_file_reader.py  logging_config.py  main.py  paths.py
src/tg_bot/dialogs/: __init__.py
src/tg_bot/dialogs/exemple/: __init__.py  dialog.py  getters.py  handlers.py
src/tg_bot/dialogs/starters/: __init__.py  exemple.py
src/tg_bot/handlers/: __init__.py  base.py
src/tg_bot/utils/: router.py
