[project]
name = "TgBotTemplate"
version = "0.1"
requires-python = ">=3.11,<3.12"
dependencies = [
]


[project.optional-dependencies]
dev = [
    "pytest~=7.1.3",
    "pytest-ordering~=0.6",
    "pytest-asyncio==0.18.3",
    "testcontainers[postgresql]~=3.7.1",
    "autoflake~=2.2.1",
    "black~=24.4.2",
    "flake8-pyproject",
    "dotenv-linter~=0.5.0",
    "flake8-absolute-import~=1.0.0.2",
    "flake8-bugbear~=24.4.26",
    "flake8-cognitive-complexity~=0.1.0",
    "flake8-eradicate~=1.5.0",
    "flake8-fixme~=1.1.1",
    "flake8-pep3101~=2.1.0",
    "flake8-pie~=0.16.0",
    "flake8-print~=5.0.0",
    "flake8-printf-formatting~=1.1.2",
    "flake8-pyproject~=1.2.3",
    "flake8-variables-names~=0.0.6",
    "flake8-walrus~=1.2.0",
    "ipython~=8.26.0",
    "isort~=5.12.0",
]


[tool.flake8]
max-line-length = 88
inline-quotes = "\""
ignore = [
    "DJ05",  # URLs include() should set a namespace
    "E501",  # Line too long
    "E265",  # Block comments should have one space before the pound sign (#) and the comment itself
    "F811",  # Redefinition of unused name from line n
    "PT001",  # Use @pytest.fixture() over @pytest.fixture
    "SIM102",  # Use a single if-statement instead of nested if-statements
    "SIM113",  # Use enumerate instead of manually incrementing a counter
    "E203",  # whitespace before ':', disabled for black purposes https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
]
exclude = [
    "migrations",
    ".git",
    "__pycache__",
]


[tool.isort]
line_length = 88
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3


[tool.black]
include_trailing_comma = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
  | .idea
  | migrations
)/
'''
line_length = 88


[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true