[project]
name = "TgBotTemplate"
requires-python = ">=3.12"
version = "0.1"
dependencies = [
    "aiogram-dialog>=2.2.0",
    "aiogram>=3.10.0,<3.11.0",
    "colorlog>=6.7.0,<7.0",
    "dishka~=1.5.3",
    "pyyaml~=6.0",
]

[dependency-groups]
dev = [
    "dotenv-linter>=0.5.0",
    "ipython>=9.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.9",
    "toml-sort>=0.24.2",
    "types-pyyaml>=6.0.12.20250402",
]

[tool.ruff]
exclude = ["__pycache__", "migrations"]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",
    "ANN003",
    "ANN201",
    "ARG001",
    "ARG005",
    "C408",
    "C417",
    "D",
    "EM101",
    "EM102",
    "FA100",
    "FA102",
    "FIX002",
    "ISC001",
    "PD008",
    "PIE790",
    "RET502",
    "RET503",
    "RET505",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF015",
    "S101",
    "S311",
    "SIM108",
    "TC003",
    "TD002",
    "TD003",
    "TD004",
    "TD005",
    "TRY003",
    "UP024",
    "UP035",
]

[tool.mypy]
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true
exclude = ['.venv', 'venv']

[tool.tomlsort]
in_place = true
no_sort_tables = true
sort_inline_tables = true
sort_inline_arrays = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
